--- a/src/App.css
+++ b/src/App.css
@@ -6,19 +6,17 @@
 html,
 body {
   height: 100vh;
-  width: 100vw;
 }
 .cnt {
-  height: 49vw;
-  width: 100vw;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background: linear-gradient(to bottom right, #ffaaff, white);
 }
 .cnt form {
-  height: 40vw;
-  width: 40vw;
+  height: 40vmax;
+  width: 40vmax;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,13 +24,13 @@ body {
 }
 .cnt button {
   transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
-  height: 3vw;
-  width: 34vw;
+  height: 3vmax;
+  width: 34vmax;
   outline: none;
   /* background-color: #9e9898; */
   border: 1px solid transparent;
-  border-radius: 1vw;
-  font-size: 1.5vw;
+  border-radius: 1vmax;
+  font-size: 1.5vmax;
   box-shadow: 2px 2px 5px gray;
 }
 .cnt button:hover,
@@ -41,36 +39,35 @@ body {
 }
 
 .cnt input {
-  padding: 1vw;
-  border-bottom: 0.2vw solid blue;
+  padding: 1vmax;
+  border-bottom: 0.2vmax solid blue;
 }
 
 .cnt2 {
   height: 100vh;
-  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
   background: linear-gradient(to bottom right, lightblue, white);
 }
 input {
-  width: 34vw;
-  height: 4vw;
-  border-radius: 0.5vw;
+  width: 34vmax;
+  height: 4vmax;
+  border-radius: 0.5vmax;
   outline: none;
   border: none;
-  /* border-bottom: 0.2vw solid black; */
-  padding: 1.3vw;
-  font-size: 2vw;
+  /* border-bottom: 0.2vmax solid black; */
+  padding: 1.3vmax;
+  font-size: 2vmax;
   /* background-color: transparent; */
 }
 small {
-  font-size: 1.3vw;
+  font-size: 1.3vmax;
   color: red;
 }
 .cnt2 form {
-  width: 50vw;
-  height: 40vw;
+  width: 50vmax;
+  height: 40vmax;
   /* background-color: tomato; */
   display: flex;
   flex-direction: column;
@@ -78,28 +75,28 @@ small {
   justify-content: space-evenly;
 }
 .cnt2 h1 {
-  margin-bottom: 1vw;
+  margin-bottom: 1vmax;
 }
 
 .cnt2 button,
 .animalform button,
 .updateform button {
   transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
-  height: 3vw;
-  width: 34vw;
+  height: 3vmax;
+  width: 34vmax;
   /* background-color: #9e9898; */
   /* border: 1px solid transparent; */
-  border-radius: 1vw;
-  font-size: 1.5vw;
+  border-radius: 1vmax;
+  font-size: 1.5vmax;
   /* box-shadow: 2px 2px 5px blue; */
   outline: none;
   cursor: pointer;
 }
 .cnt2 a {
-  margin-top: 5vw;
+  margin-top: 5vmax;
 }
 a {
-  font-size: 1.5vw;
+  font-size: 1.5vmax;
 }
 button:hover {
   transform: scale(0.97);
@@ -110,7 +107,7 @@ button:focus {
 }
 .cnt3 {
   height: 100vh;
-  width: 100vw;
+  width: 100vmax;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -150,72 +147,72 @@ button:focus {
   display: none;
 }
 h1 {
-  font-size: 3vw;
+  font-size: 3vmax;
 }
 .show {
-  font-size: 1.5vw;
+  font-size: 1.5vmax;
   cursor: pointer;
-  margin-top: -3vw;
-  margin-left: 31vw;
-  margin-bottom: 1vw;
+  margin-top: -3vmax;
+  margin-left: 31vmax;
+  margin-bottom: 1vmax;
 }
 .animalform {
-  height: 40vw;
-  width: 99vw;
+  height: 40vmax;
+  width: 99vmax;
   background: linear-gradient(to bottom right, #ffaaff, white);
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
-  border-top: 0.2vw solid black;
+  border-top: 0.2vmax solid black;
 }
 .updateform {
-  height: 42.8vw;
-  width: 99vw;
+  height: 42.8vmax;
+  width: 99vmax;
   background: linear-gradient(to bottom right, #ffaaff, white);
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-direction: column;
-  border-top: 0.2vw solid black;
+  border-top: 0.2vmax solid black;
 }
 .kards {
-  border-top: 0.2vw solid black;
-  min-height: 30vw;
-  width: 99vw;
+  border-top: 0.2vmax solid black;
+  min-height: 30vmax;
+  width: 99vmax;
   display: flex;
   flex-wrap: wrap;
-  padding: 0.5vw;
+  padding: 0.5vmax;
   background: linear-gradient(to top right, #ffaaff, white);
 }
 .animalform input {
   transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
-  border-bottom: 0.1vw solid black;
-  font-size: 1.5vw;
-  height: 3vw;
-  width: 40vw;
+  border-bottom: 0.1vmax solid black;
+  font-size: 1.5vmax;
+  height: 3vmax;
+  width: 40vmax;
 }
 .animalform input:focus {
-  border-bottom: 0.15vw solid black;
+  border-bottom: 0.15vmax solid black;
 }
 .animalform button,
 .updateform button {
-  height: 3vw;
-  width: 40vw;
+  height: 3vmax;
+  width: 40vmax;
 }
 .kard {
   cursor: pointer;
-  padding: 1vw;
-  margin: 0.5vw;
-  min-height: 23vw;
-  width: 18vw;
+  padding: 1vmax;
+  margin: 0.5vmax;
+  min-height: 23vmax;
+  width: 18vmax;
   word-wrap: break-word;
   background-color: transparent;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
-  border-radius: 0.5vw;
+  border-radius: 0.5vmax;
   box-shadow: 3px 3px 3px 3px grey;
   transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
@@ -223,21 +220,21 @@ h1 {
   box-shadow: 1px 1px 1px 1px grey;
 }
 img {
-  width: 16vw;
+  width: 16vmax;
 }
 .animal {
-  margin-bottom: 1vw;
+  margin-bottom: 1vmax;
 }
 center {
   font-family: monospace;
-  border-top: 0.2vw solid black;
+  border-top: 0.2vmax solid black;
 }
 textarea {
-  width: 45vw;
-  height: 3.5vw;
-  font-size: 1.5vw;
-  padding: 0.5vw;
+  width: 45vmax;
+  height: 3.5vmax;
+  font-size: 1.5vmax;
+  padding: 0.5vmax;
 }
 textarea[name="image"] {
-  height: 11vw;
+  height: 11vmax;
 }
